// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenTime should match snapshot 1`] = `
<div
  className="css-1yoh2yd"
  layer="1"
  position="relative"
>
  <h4
    className="css-ahm0rg"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Screen Time
     
    <sup
      className="css-1aymr1c"
    >
      BETA
    </sup>
    <div
      className="css-79elbk"
    >
      <div
        className="css-4pw2fe"
      >
        <span
          className="css-xrmt9z"
        >
          <div
            className="css-nxex8j"
          />
          <div
            className="css-91tplw"
          >
            Screen time is the time viewing sites between your breaks
          </div>
        </span>
      </div>
    </div>
  </h4>
  <svg
    className="css-1m3p9o7"
    data-testid="graph"
    style={
      Object {
        "height": 275,
        "width": 600,
      }
    }
  >
    <g
      className="css-0"
      transform="rotate(-89, 300, 137.5)"
    >
      <path
        className="css-8wkuw0"
        d="M 400 137.5 A 100 100 0 0 1 254.78696143925166 226.69518565541688"
        data-testid="graph-segment"
        onClick={[Function]}
        strokeLinecap="round"
        strokeWidth={16}
      />
      <path
        className="css-8wkuw0"
        d="M 231.95291274890502 210.77751303532256 A 100 100 0 0 1 243.56355381395008 54.947425588967306"
        data-testid="graph-segment"
        onClick={[Function]}
        strokeLinecap="round"
        strokeWidth={16}
      />
      <path
        className="css-8wkuw0"
        d="M 268.50437935300914 42.58937951914527 A 100 100 0 0 1 383.37096071317376 82.27968752567193"
        data-testid="graph-segment"
        onClick={[Function]}
        strokeLinecap="round"
        strokeWidth={16}
      />
      <path
        className="css-8wkuw0"
        d="M 395.36209200496467 107.39897994358567 A 100 100 0 0 1 396.1261695938319 109.93626441830011"
        data-testid="graph-segment"
        onClick={[Function]}
        strokeLinecap="round"
        strokeWidth={16}
      />
    </g>
    <text
      alignmentBaseline="baseline"
      className="css-1gj31oj"
      onClick={[Function]}
      textAnchor="start"
      x={403.3319028289867}
      y={76.48755981161841}
    >
      www.bar.com
    </text>
    <text
      alignmentBaseline="hanging"
      className="css-1gj31oj"
      onClick={[Function]}
      textAnchor="end"
      x={288.99657269198025}
      y={256.9944542122233}
    >
      foo.com
    </text>
    <text
      alignmentBaseline="baseline"
      className="css-1gj31oj"
      onClick={[Function]}
      textAnchor="end"
      x={187.2811990722431}
      y={96.3360361795817}
    >
      web.baz.com
    </text>
    <text
      alignmentBaseline="baseline"
      className="css-1gj31oj"
      onClick={[Function]}
      textAnchor="end"
      x={267.4087140979822}
      y={22.01057155196871}
    >
      other
    </text>
  </svg>
  <div
    className="css-1xhj18k"
  >
    <div
      className="css-1n2mv2k"
    >
      <div
        className="css-1j6ivwb"
        onClick={[Function]}
      >
        <div
          className="css-1a07xhr"
        />
      </div>
    </div>
    <p
      className="css-gq0ijd"
    >
      Screen Time is disabled
    </p>
  </div>
</div>
`;

exports[`ScreenTime should match snapshot with a grouped selected segment 1`] = `
<div
  className="css-1yoh2yd"
  layer="1"
  position="relative"
>
  <h4
    className="css-ahm0rg"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Screen Time
     
    <sup
      className="css-1aymr1c"
    >
      BETA
    </sup>
    <div
      className="css-79elbk"
    >
      <div
        className="css-4pw2fe"
      >
        <span
          className="css-xrmt9z"
        >
          <div
            className="css-nxex8j"
          />
          <div
            className="css-91tplw"
          >
            Screen time is the time viewing sites between your breaks
          </div>
        </span>
      </div>
    </div>
  </h4>
  <div
    className="css-0"
  >
    <svg
      className="css-0"
      height="250px"
      width="600px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="css-0"
        d="M19 125.5h566"
        stroke="outerSpace"
        strokeLinecap="round"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="235.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="102.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="521.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="33.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="64.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="26.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="364.5"
        cy="39.5"
        fill="outerSpace"
        fillRule="nonzero"
        r="26.5"
      />
      <circle
        className="css-0"
        cx="456"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
      <circle
        className="css-0"
        cx="419"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
    </svg>
    <p
      className="css-1hhdzfd"
    >
      Explore more, there is not enough data to show you anything yet.
    </p>
  </div>
  <div
    className="css-1xhj18k"
  >
    <div
      className="css-1n2mv2k"
    >
      <div
        className="css-1j6ivwb"
        onClick={[Function]}
      >
        <div
          className="css-1a07xhr"
        />
      </div>
    </div>
    <p
      className="css-gq0ijd"
    >
      Screen Time is disabled
    </p>
  </div>
  <div
    allSegments={
      Array [
        Object {
          "label": "foo.com",
          "originalData": Object {
            "foo.com": Object {
              "breakTimer": Object {},
              "originalURL": "https://foo.com",
              "time": 6619.509999931324,
            },
          },
          "percent": 0.6720393182210956,
        },
        Object {
          "label": "mail.bar.com",
          "originalData": Object {
            "mail.bar.com": Object {
              "breakTimer": Object {},
              "originalURL": "https://mail.bar.com",
              "time": 3230.375000031665,
            },
          },
          "percent": 0.3279606817789043,
        },
      ]
    }
    className="css-zxi8vn"
    closeTimeoutMS={200}
    data-mujo={true}
    isOpen={true}
    overlayClassName="mujo-modal css-qcfpiy"
    portalClassName="css-16nllqz"
    selectedSegment={
      Object {
        "label": "qux",
        "urls": Array [
          "https://foo.com",
          "https://main.bar.com",
        ],
      }
    }
    shouldCloseOnOverlayClick={true}
    theme={
      Object {
        "background": "outerSpace",
        "backgroundSecondary": "gravel",
        "buttonStyle": "primary",
        "foreground": "mischka",
        "foregroundSecondary": "white",
        "highlight": "saltBox",
      }
    }
  >
    <div
      className="css-1gam40h"
    >
      <svg
        fill="none"
        height={32}
        icon="close"
        stroke="#EAE2EB"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`ScreenTime should match snapshot with a selected segment 1`] = `
<div
  className="css-1yoh2yd"
  layer="1"
  position="relative"
>
  <h4
    className="css-ahm0rg"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Screen Time
     
    <sup
      className="css-1aymr1c"
    >
      BETA
    </sup>
    <div
      className="css-79elbk"
    >
      <div
        className="css-4pw2fe"
      >
        <span
          className="css-xrmt9z"
        >
          <div
            className="css-nxex8j"
          />
          <div
            className="css-91tplw"
          >
            Screen time is the time viewing sites between your breaks
          </div>
        </span>
      </div>
    </div>
  </h4>
  <div
    className="css-0"
  >
    <svg
      className="css-0"
      height="250px"
      width="600px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="css-0"
        d="M19 125.5h566"
        stroke="outerSpace"
        strokeLinecap="round"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="235.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="102.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="521.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="33.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="64.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="26.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="364.5"
        cy="39.5"
        fill="outerSpace"
        fillRule="nonzero"
        r="26.5"
      />
      <circle
        className="css-0"
        cx="456"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
      <circle
        className="css-0"
        cx="419"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
    </svg>
    <p
      className="css-1hhdzfd"
    >
      Explore more, there is not enough data to show you anything yet.
    </p>
  </div>
  <div
    className="css-1xhj18k"
  >
    <div
      className="css-1n2mv2k"
    >
      <div
        className="css-1j6ivwb"
        onClick={[Function]}
      >
        <div
          className="css-1a07xhr"
        />
      </div>
    </div>
    <p
      className="css-gq0ijd"
    >
      Screen Time is disabled
    </p>
  </div>
  <div
    allSegments={
      Array [
        Object {
          "label": "foo.com",
          "originalData": Object {
            "foo.com": Object {
              "breakTimer": Object {},
              "originalURL": "https://foo.com",
              "time": 6619.509999931324,
            },
          },
          "percent": 0.6720393182210956,
        },
        Object {
          "label": "mail.bar.com",
          "originalData": Object {
            "mail.bar.com": Object {
              "breakTimer": Object {},
              "originalURL": "https://mail.bar.com",
              "time": 3230.375000031665,
            },
          },
          "percent": 0.3279606817789043,
        },
      ]
    }
    className="css-zxi8vn"
    closeTimeoutMS={200}
    data-mujo={true}
    isOpen={true}
    overlayClassName="mujo-modal css-qcfpiy"
    portalClassName="css-16nllqz"
    selectedSegment={
      Object {
        "data": Object {
          "breakTimer": Object {},
          "originURL": "https://foo.com",
          "time": 6619.509999931324,
        },
        "label": "foo.com",
        "urls": Array [
          "https://foo.com",
        ],
      }
    }
    shouldCloseOnOverlayClick={true}
    theme={
      Object {
        "background": "outerSpace",
        "backgroundSecondary": "gravel",
        "buttonStyle": "primary",
        "foreground": "mischka",
        "foregroundSecondary": "white",
        "highlight": "saltBox",
      }
    }
  >
    <div
      className="css-1gam40h"
    >
      <svg
        fill="none"
        height={32}
        icon="close"
        stroke="#EAE2EB"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </div>
  </div>
</div>
`;
